# agent-rx

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: remediation-plan.md  remediation-report.md
src/agent_rx/: __init__.py  actions.py  analyze.py  cli.py  environment.py  loop.py  prioritizer.py  proposer.py  reporter.py  schema.py  severity.py  stats.py  training.py
tests/: conftest.py  test_actions.py  test_analyze.py  test_environment.py  test_loop.py  test_prioritizer.py  test_schema.py  test_severity.py  test_stats.py
